# kuwagga

./: .gitignore  ANALYSIS_REPORT.md  COMMIT_MESSAGE.txt  DEBUG_STATUS_2026-03-09.md  README.md  REVIEW_STATUS.md  REVIEW_SUMMARY.md  cleanup_repo.py  script_verification_report_20260103_233951.txt  script_verification_report_20260103_234456.txt  script_verification_report_20260103_234829.txt  script_verification_report_20260103_235226.txt  script_verification_report_20260103_235252.txt  script_verification_report_20260103_235451.txt  script_verification_report_20260103_235503.txt  script_verification_report_20260103_235804.txt  script_verification_report_20260104_000311.txt  script_verification_report_20260104_000541.txt  script_verification_report_20260104_000806.txt  script_verification_report_20260104_000823.txt  script_verification_report_20260104_001230.txt  script_verification_report_20260104_005047.txt  script_verification_report_20260104_005610.txt  script_verification_report_20260104_005626.txt  verify_scripts.py  verify_scripts.zsh
04 - August - 2025/: 01 - put back from trash.zsh  03 - undo git commit.zsh  04 - stop icloud automatic downloads.zsh
hokkaido-disk-sentinel/: .gitignore  LICENSE  README.md  pyproject.toml
hokkaido-disk-sentinel/docs/: usage.md
hokkaido-disk-sentinel/src/hokkaido_disk_sentinel/: interactive.py  safety.py  scanner.py
hokkaido-disk-sentinel/src/hokkaido_disk_sentinel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hokkaido-disk-sentinel/tests/: test_safety.py  test_utils.py
(+316 files in other folders)
