[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hokkaido-disk-sentinel"
version = "0.1.0"
description = "Herramienta profesional de monitoreo y limpieza de disco conservadora y multiplataforma."
readme = "README.md"
authors = [
    { name = "Hokkaido Sentinel Team" }
]
license = { text = "MIT License" }
requires-python = ">=3.13"
dependencies = [
    "rich>=13.7.0",
    "typer>=0.12.0",
    "psutil>=5.9.8",
    "platformdirs>=4.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
hokkaido-sentinel = "hokkaido_disk_sentinel.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
